--- a/.github/workflows/docs-generation.yml
+++ b/.github/workflows/docs-generation.yml
@@ -16,7 +16,7 @@ jobs:
         chmod +x ./run_generate_docs.sh
         ./run_generate_docs.sh
         mkdir result
-        cp ../Documentation/Diagrams/*.png ../Documentation/Diagrams/*.svg result
+        cp ../Documentation/Diagrams/*.svg result
 
     - name: Archive latex docs
       uses: actions/upload-artifact@v2
